--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ langchain-openai>=0.0.2
 fastapi>=0.104.1
 uvicorn>=0.24.0
 pydantic>=2.5.2
+pydantic-settings>=2.1.0
 python-dotenv>=1.0.0
 aiohttp>=3.9.1
 httpx>=0.25.2
