--- a/wayfare/requirements.txt
+++ b/wayfare/requirements.txt
@@ -1,10 +1,12 @@
 langchain>=0.1.0
-langchain-community
+langchain-community>=0.0.10
+langchain-google>=0.0.5
+langchain-google-community>=0.0.1
 setuptools
 langchain-openai>=0.0.2
-fastapi>=0.104.1
-uvicorn>=0.24.0
-pydantic>=2.5.2
+fastapi>=0.109.0
+uvicorn>=0.27.0
+pydantic>=2.5.3
 pydantic-settings>=2.1.0
 python-dotenv>=1.0.0
 aiohttp>=3.9.1
@@ -19,4 +21,7 @@ python-jose[cryptography]>=3.3.0
 tenacity>=8.2.3
 redis>=5.0.1
 celery>=5.3.6
-polyline==2.0.0
+polyline>=2.0.1
+google-api-python-client>=2.114.0
+python-multipart>=0.0.6
+duckduckgo-search
